	- do not process any entries when "xpath_expr" is invalid
	- added a few more XPath error messages
	- fixed memory leak in create_cfg() when creating a .cfg file
	- merged redundant dipswitch/configuration parsing code into parse_listxml_element_cfg()
	- added enum cfg_type for .cfg entry type parameter
	- added option "use_softwarelist" to control usage of software lists
	- renamed the output file postfix for device file entries from "dev" to "sfw" (software)
	- made process ID code working with Visual Studio
	- added warning when "use_softwarelist" is set, but "hashpath" isn't
	- renamed device_type to device_briefname
	
0.71
	- fixed compilation with USE_VALGRIND set to 1
	- fixed resource leak when parsing MNGs without MHDR (reported by cppcheck)
	- replaced some unecessary strlen() calls reported by cppcheck
	- added missing static to clear_directory_nosnap()
	- simplified append_string()
	- avoid Visual Studio warnings about constant expressions

0.72
	- do not write "autosave" flag to output XML when "use_autosave" is not set to 1
	- moved info from mame_regtest.c to README
	- enabled parse_directory() for Visual Studio 2010 by using dirent API
	- separated project output folders in Visual Studio
	- also compile mame_regtest Release as C++
	- avoid warning about unreachable code with Visual Studio Release build
	- added split_string() to common.c/.h
	- added free_array() to common.c/.h
	- updated default "valgrind_parameters"
		- removed "--leak-resolution=med" since the valgrind default is now "high"
		- added "--track-origins=yes"
	- added "pngcmp" for PNG comparison
	- fixed "start_at" example in default configuration
	- added get_directory() to common.c/.h
	
	create_report
	- added a summary at the end when "dokuwiki_format" is set
	- added support for multiple input folders (separated by ';')
	- updated comparison report to invoke pngcmp and output in HTML
	- added option "output_folder" for comparison reports