@@ -499,6 +499,7 @@
 	- added "pngcmp" for PNG comparison
 	- fixed "start_at" example in default configuration
 	- added get_directory() to common.c/.h
+	- changed "device_mandatory" from integer to string
 	
 	create_report
 	- added a summary at the end when "dokuwiki_format" is set
